infra/k8s/rook-ceph/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rook-ceph-mgr-dash
  namespace: rook-ceph
  labels:
    app: rook-ceph-mgr
    rook_cluster: rook-ceph
spec:
  ports:
  - name: dashboard
    port: 8083
    protocol: TCP
    targetPort: 8083
  selector:
    app: rook-ceph-mgr
    rook_cluster: rook-ceph
  sessionAffinity: None
  type: NodePort
